--- a/.github/workflows/ipa.yml
+++ b/.github/workflows/ipa.yml
@@ -59,7 +59,11 @@ jobs:
 
       - name: Set up git repository
         uses: actions/checkout@v2
-
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+          
       - name: Setup ipatool-py
         run: |
           git clone https://github.com/dimitrovdv/ipatool_dev.git
