--- a/.github/workflows/ipa.yml
+++ b/.github/workflows/ipa.yml
@@ -108,7 +108,7 @@ jobs:
             #   output=$(python3 ipatool_dev/main.py --json lookup -b ${{ github.event.inputs.appBundleId }} -c ${{ github.event.inputs.appCountry }} \
             #                                     download -o ipaDown -s http://127.0.0.1:9000 $appVerCmd --purchase)
             if [[ "$op" == "download" ]]; then
-              output=$(python3 ipatool_dev/main.py --json download -o ipaDown -s http://127.0.0.1:9000 --appId 310633997 --purchase)
+              output=$(python3 ipatool_dev/main.py --json download -o ipaDown -s http://127.0.0.1:9000 --appId ${{ github.event.inputs.appVerId }} --purchase)
             elif [[ "$op" == "download_id" ]]; then
               output=$(python3 ipatool_dev/main.py --json download -o ipaDown -s http://127.0.0.1:9000 --appId ${{ github.event.inputs.id }} $appVerCmd)
             fi
