--- a/.github/workflows/ipa.yml
+++ b/.github/workflows/ipa.yml
@@ -136,13 +136,13 @@ jobs:
           (cd ipaDown; find . -name "*.ipa" -size +1879048192b -exec split --bytes=1879048192 --suffix-length=3 --numeric-suffix {} ../ipaDown_split/{}. \;)
           (cd ipaDown; find . -name "*.ipa" -not -size +1879048192b -exec cp -r {} ../ipaDown_split \;)
         shell: bash
-      - name: Telegram Notify
-        uses: appleboy/telegram-action@0.0.3
-        with:
-          to: ${{ secrets.TELEGRAM_CHAT_ID }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: |
-            Статус задания ${{ job.status }} с УЗ ${{ github.event.inputs.appleId }} 
+      # - name: Telegram Notify
+      #   uses: appleboy/telegram-action@0.0.3
+      #   with:
+      #     to: ${{ secrets.TELEGRAM_CHAT_ID }}
+      #     token: ${{ secrets.TELEGRAM_TOKEN }}
+      #     message: |
+      #       Статус задания ${{ job.status }} с УЗ ${{ github.event.inputs.appleId }} 
         
       - name: Pushing to release
         if: ${{ steps.operation.outputs.needIPARelease == 1 }}
