--- a/.github/workflows/ipa.yml
+++ b/.github/workflows/ipa.yml
@@ -142,6 +142,8 @@ jobs:
         if: ${{ always() }}
         with:
           notification-token: ${{ secrets.NOTIFICATION_TOKEN }}
+          bot-token: ${{ secrets.TELEGRAM_TOKEN }}
+          chat-id: ${{ secrets.TELEGRAM_CHAT_ID }}
           job-status: Статус задания ${{ job.status }} с УЗ ${{ github.event.inputs.appleId }}    
         
       - name: Pushing to release
