--- a/.github/workflows/ipa.yml
+++ b/.github/workflows/ipa.yml
@@ -137,13 +137,13 @@ jobs:
           (cd ipaDown; find . -name "*.ipa" -not -size +1879048192b -exec cp -r {} ../ipaDown_split \;)
         shell: bash
         
-      - name: Telegram Notify
-        uses: andrewscwei/telegram-action@v1
-        with:
-          success: ${{ needs.build.result == 'success' }}
-          cancelled: ${{ needs.build.result == 'cancelled' }}
-          bot-token: ${{ secrets.TELEGRAM_BOT_TOKEN}}
-          chat-id: ${{ secrets.TELEGRAM_CHAT_ID }}
+      # - name: Telegram Notify
+      #   uses: andrewscwei/telegram-action@v1
+      #   with:
+      #     success: ${{ needs.build.result == 'success' }}
+      #     cancelled: ${{ needs.build.result == 'cancelled' }}
+      #     bot-token: ${{ secrets.TELEGRAM_BOT_TOKEN}}
+      #     chat-id: ${{ secrets.TELEGRAM_CHAT_ID }}
           
         # uses: haishanh/actions-telegram-notification@v1
         # if: ${{ always() }}
