--- a/.github/workflows/ipa.yml
+++ b/.github/workflows/ipa.yml
@@ -145,25 +145,11 @@ jobs:
           # chat-id: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
           echo Telegram Notify...
-          python3 ipatool_dev/telegram.py %APPLEID% %bot-token%
+          echo apple_id=${{ inputs.apple_id }} >> .env
+          more .env
+          python3 ipatool_dev/telegram.py
         working-directory: ${{ github.action_path }}
-        shell: cmd
-      # - name: Telegram Notify
-      #   uses: andrewscwei/telegram-action@v1
-      #   with:
-      #     success: ${{ needs.build.result == 'success' }}
-      #     cancelled: ${{ needs.build.result == 'cancelled' }}
-      #     bot-token: ${{ secrets.TELEGRAM_BOT_TOKEN}}
-      #     chat-id: ${{ secrets.TELEGRAM_CHAT_ID }}
-          
-        # uses: haishanh/actions-telegram-notification@v1
-        # if: ${{ always() }}
-        # with:
-        #   notification-token: ${{ secrets.NOTIFICATION_TOKEN }}
-        #   bot-token: ${{ secrets.TELEGRAM_TOKEN }}
-        #   chat-id: ${{ secrets.TELEGRAM_CHAT_ID }}
-        #   job-status: Статус задания ${{ job.status }} с УЗ ${{ github.event.inputs.appleId }}    
-        
+        shell: cmd       
       - name: Pushing to release
         if: ${{ steps.operation.outputs.needIPARelease == 1 }}
         uses: ncipollo/release-action@v1
