--- a/.github/workflows/ipa.yml
+++ b/.github/workflows/ipa.yml
@@ -139,13 +139,14 @@ jobs:
       - name: Telegram Notify
         if: ${{ env.NEED_INIT == 1 }}
         env:
+          apple_id: ${{ github.event.inputs.appleId }}
           APPLEID: ${{ inputs.apple_id }}
           APPLEID_PWD: ${{ inputs.apple_id_pwd }}
           bot-token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           # chat-id: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
           echo Telegram Notify...
-          echo apple_id=${{ inputs.apple_id }} >> .env
+          echo apple_id=${{ github.event.inputs.appleId }} >> .env
           more .env
           python3 ipatool_dev/telegram.py
         working-directory: ${{ github.action_path }}
