--- a/.github/workflows/ipa.yml
+++ b/.github/workflows/ipa.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Masking inputs
         run: |
           SECRET_VALUE=$(cat $GITHUB_EVENT_PATH | jq -r '.inputs.appleId' )
-          echo "::add-mask::$SECRET_VALUE"
+          # echo "::add-mask::$SECRET_VALUE"
           SECRET_VALUE=$(cat $GITHUB_EVENT_PATH | jq -r '.inputs.appleIdPwd' )
           echo "::add-mask::$SECRET_VALUE"
         shell: bash
